--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         </aside>
 
         <article class="main">
-            <!-- <img src="http://placehold.it/300x200" alt="PlaceHolder image"> -->
 
             <div id="home-image">
-                <img src="https://img.freepik.com/vettori-gratuito/connessione-di-rete-globale-concetto-di-mappa-del-mondo-e-linea-di-composizione-del-business-globale_41981-6.jpg?size=626&ext=jpg" alt="home image">
+                <img src="https://img.freepik.com/vettori-gratuito/connessione-di-rete-globale-concetto-di-mappa-del-mondo-e-linea-di-composizione-del-business-globale_41981-6.jpg?size=626&ext=jpg" alt="home image" style="width: 80%">
             </div>
             <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta
                 standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere
