--- a/contact.html
+++ b/contact.html
@@ -29,12 +29,39 @@
 
         <article class="main">
             <!-- <img src="http://placehold.it/300x200" alt="PlaceHolder image"> -->
+            <h1>Contact</h1><br>
 
+            <div id="form">
+                <form action="process.php">
+                    <ul>
+                        <li id="name">
+                            <label for="name">Name:</label>
+                            <input type="text" name="name">
+                        </li>
+                        <li id="subject">
+                            <label for="subject">Subject:</label>
+                            <input type="text" name="subject">
+                        </li>
+                        <li id="email">
+                            <label for="email">Email::</label>
+                            <input type="text" name="email">
+                        </li>
+                        <li id="text-area">
+                            <label for="email">Message:</label>
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                        </li>
+                        <li>
+                            <input type="submit" value="Submit">
+                        </li>
+                    </ul>
+                </form>
+            </div>
         </article>
 
         <footer>
-                &copy; 2019 Minimalist Website &nbsp; <span class="separator">|</span> Design by <a href="http://www.">Gabriel Acatrinei</a>
-            </footer>
+            &copy; 2019 Minimalist Website &nbsp; <span class="separator">|</span> Design by <a
+                href="http://www.">Gabriel Acatrinei</a>
+        </footer>
 
     </div>
 </body>
