--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
         <article class="main">
             <div id="home-image">
-                <img src="https://www.umc.edu/alliance/images/about-us.jpg?text=Profile+Image" alt="About us picture">
+                <img src="images/about-us.png" alt="About us picture">
             </div>
             <div id="profile-info">
 
