--- a/contact.html
+++ b/contact.html
@@ -35,23 +35,24 @@
                 <form action="process.php">
                     <ul>
                         <li id="name">
-                            <label for="name">Name:</label>
-                            <input type="text" name="name">
+                            <label for="name"></label>
+                            <input type="text" name="name" placeholder="Name">
                         </li>
                         <li id="subject">
-                            <label for="subject">Subject:</label>
-                            <input type="text" name="subject">
+                            <label for="subject"></label>
+                            <input type="text" name="subject" placeholder="Subject:">
                         </li>
                         <li id="email">
-                            <label for="email">Email::</label>
-                            <input type="text" name="email">
+                            <label for="email"></label>
+                            <input type="text" name="email" placeholder="Email:">
                         </li>
                         <li id="text-area">
-                            <label for="email">Message:</label>
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <label for="email"></label>
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Message:"></textarea>
                         </li>
-                        <li>
-                            <input type="submit" value="Submit">
+                        <li id="submit">
+                            <!-- <button id="submit-button"><img src="images/IMG_0994.JPG"></button> -->
+                            <input type="image" src="images/IMG_0994.JPG" alt="Submit" width="100" height="48"> 
                         </li>
                     </ul>
                 </form>
@@ -60,7 +61,7 @@
 
         <footer>
             &copy; 2019 Minimalist Website &nbsp; <span class="separator">|</span> Design by <a
-                href="http://www.">Gabriel Acatrinei</a>
+                href="https://gabrielak89.github.io/Minimalist_Website/">Gabriel Acatrinei</a>
         </footer>
 
     </div>
