--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </article>
 
         <footer>
-            &copy; 2019 Minimalist Website &nbsp; <span class="separator">|</span> Design by <a href="http://www.">Gabriel Acatrinei</a>
+            &copy; 2019 Minimalist Website &nbsp; <span class="separator">|</span> Design by <a href="https://gabrielak89.github.io/Minimalist_Website/">Gabriel Acatrinei</a>
         </footer>
 
     </div>
