--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <title>Contact</title>
 </head>
 
-<body>
+<body id="contact">
     <div class="container">
         <header class="header">
             <a class="link-title" href="index.html">Minimalistic Website</a>
@@ -29,32 +29,30 @@
 
         <article class="main">
             <!-- <img src="http://placehold.it/300x200" alt="PlaceHolder image"> -->
-            <h1>Contact</h1><br>
+            <h1 class="page-heading">Contact</h1><br>
 
             <div id="form">
                 <form action="process.php">
-                    <ul>
-                        <li id="name">
-                            <label for="name"></label>
-                            <input type="text" name="name" placeholder="Name">
-                        </li>
-                        <li id="subject">
-                            <label for="subject"></label>
-                            <input type="text" name="subject" placeholder="Subject:">
-                        </li>
-                        <li id="email">
-                            <label for="email"></label>
-                            <input type="text" name="email" placeholder="Email:">
-                        </li>
-                        <li id="text-area">
-                            <label for="email"></label>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Message:"></textarea>
-                        </li>
-                        <li id="submit">
-                            <!-- <button id="submit-button"><img src="images/IMG_0994.JPG"></button> -->
-                            <input type="image" src="images/IMG_0994.JPG" alt="Submit" width="100" height="48"> 
-                        </li>
-                    </ul>
+                    <p>
+                        <label for="name"></label>Name:
+                        <input type="text" name="name" placeholder="Your Name">
+                    </p>
+                    <p>
+                        <label for="email"></label>Email:
+                        <input type="text" name="email" placeholder="Your Email:">
+                    </p>
+                    <p>
+                        <label for="subject"></label>Subject:
+                        <input type="text" name="subject" placeholder="What is the subject:">
+                    </p>
+                    <p>
+                        <label for="message"></label>Message:
+                        <textarea name="" id="message" cols="30" rows="10" placeholder="Message:"></textarea>
+                    </p>
+                    <p>
+                        <input id="submit" type="submit" value="Send message" src="images/IMG_0994.JPG" alt="Submit"
+                            width="100" height="48">
+                    </p>
                 </form>
             </div>
         </article>
