--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 
         <footer>
             &copy; 2019 Minimalist Website &nbsp; <span class="separator">|</span> Design by <a
-                href="http://www.">Gabriel Acatrinei</a>
+                href="https://gabrielak89.github.io/Minimalist_Website/">Gabriel Acatrinei</a>
         </footer>
 
     </div>
