--- a/contact.html
+++ b/contact.html
@@ -32,26 +32,26 @@
             <h1 class="page-heading">Contact</h1><br>
 
             <div id="form">
-                <form action="process.php">
+                <form method="POST" action="process.php">
                     <p>
                         <label for="name"></label>Name:
-                        <input type="text" name="name" placeholder="Your Name">
+                        <input type="text" name="name" placeholder="Your Name" required>
                     </p>
                     <p>
                         <label for="email"></label>Email:
-                        <input type="text" name="email" placeholder="Your Email:">
+                        <input type="text" name="email" placeholder="Your Email:" required>
                     </p>
                     <p>
                         <label for="subject"></label>Subject:
-                        <input type="text" name="subject" placeholder="What is the subject:">
+                        <input type="text" name="subject" placeholder="What is the subject:" required>
                     </p>
                     <p>
                         <label for="message"></label>Message:
-                        <textarea name="" id="message" cols="30" rows="10" placeholder="Message:"></textarea>
+                        <textarea name="body" id="message" cols="30" rows="10" placeholder="Message:"
+                            required></textarea>
                     </p>
                     <p>
-                        <input id="submit" type="submit" value="Send message" src="images/IMG_0994.JPG" alt="Submit"
-                            width="100" height="48">
+                        <input id="submit" type="submit" value="Send message" name="submit">
                     </p>
                 </form>
             </div>
