--- a/index.html
+++ b/index.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/scripts.js"></script>
-    <title>Minimalist Webpage</title>
-</head>
-
-<body>
-    <div class="container">
-        <header class="header">
-            <a class="link-title" href="index.html">Minimalistic Website</a>
-            <!-- <a href="contact.html">Contact</a> -->
-        </header>
-
-        <nav class="menu">
-            <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="about.html">About us</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="contact.html">Contact</a>
-        </nav>
-
-        <aside>
-            <h1>Side Bar</h1>
-        </aside>
-
-        <article class="main">
-
-            <div id="home-image">
-                <img src="https://img.freepik.com/vettori-gratuito/connessione-di-rete-globale-concetto-di-mappa-del-mondo-e-linea-di-composizione-del-business-globale_41981-6.jpg?size=626&ext=jpg" alt="home image" style="width: 80%">
-            </div>
-            <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta
+    <head>
+        <meta charset="utf-8">
+            <meta content="width=device-width,height=device-height,initial-scale=1.0" name="viewport"/>
+            <meta content="ie=edge" http-equiv="X-UA-Compatible">
+                <link href="css/style.css" rel="stylesheet">
+                    <script src="js/scripts.js">
+                    </script>
+                    <title>
+                        Minimalist Webpage
+                    </title>
+                </link>
+            </meta>
+        </meta>
+    </head>
+    <body>
+        <div class="container">
+            <header class="header">
+                <a class="link-title" href="index.html">
+                    Minimalistic Website
+                </a>
+                <!-- <a href="contact.html">Contact</a> -->
+            </header>
+            <nav class="menu">
+                <a href="index.html">
+                    Home
+                </a>
+                <a href="about.html">
+                    About us
+                </a>
+                <a href="contact.html">
+                    Contact
+                </a>
+            </nav>
+            <aside>
+                <h1>
+                    Side Bar
+                </h1>
+            </aside>
+            <article class="main">
+                <div id="home-image">
+                    <img alt="home image" src="https://img.freepik.com/vettori-gratuito/connessione-di-rete-globale-concetto-di-mappa-del-mondo-e-linea-di-composizione-del-business-globale_41981-6.jpg?size=626&ext=jpg" style="width: 80%">
+                    </img>
+                </div>
+                <p>
+                    Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta
                 standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere
                 şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a
                 supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată.
                 A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau pasaje Lorem Ipsum, iar
                 mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni
-                de Lorem Ipsum.</p>
-
-            <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta
+                de Lorem Ipsum.
+                </p>
+                <p>
+                    Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta
                 standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere
                 şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a
                 supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată.
                 A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau pasaje Lorem Ipsum, iar
                 mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni
-                de Lorem Ipsum.</p>
-
-            <p>În ciuda opiniei publice, Lorem Ipsum nu e un simplu text fără sens. El îşi are rădăcinile într-o bucată
+                de Lorem Ipsum.
+                </p>
+                <p>
+                    În ciuda opiniei publice, Lorem Ipsum nu e un simplu text fără sens. El îşi are rădăcinile într-o bucată
                 a literaturii clasice latine din anul 45 î.e.n., făcând-o să aibă mai bine de 2000 ani. Profesorul
                 universitar de latină de la colegiul Hampden-Sydney din Virginia, Richard McClintock, a căutat în
                 bibliografie unul din cele mai rar folosite cuvinte latine "consectetur", întâlnit în pasajul Lorem
@@ -56,14 +70,19 @@
                 sigur sursa provenienţei textului. Lorem Ipsum provine din secţiunile 1.10.32 şi 1.10.33 din "de Finibus
                 Bonorum et Malorum" (Extremele Binelui şi ale Răului) de Cicerone, scrisă în anul 45 î.e.n. Această
                 carte este un tratat în teoria eticii care a fost foarte popular în perioada Renasterii. Primul rând din
-                Lorem Ipsum, "Lorem ipsum dolor sit amet...", a fost luat dintr-un rând din secţiunea 1.10.32.</p>
-        </article>
-
-        <footer>
-            &copy; 2019 Minimalist Website &nbsp; <span class="separator">|</span> Design by <a href="https://gabrielak89.github.io/Minimalist_Website/">Gabriel Acatrinei</a>
-        </footer>
-
-    </div>
-</body>
-
+                Lorem Ipsum, "Lorem ipsum dolor sit amet...", a fost luat dintr-un rând din secţiunea 1.10.32.
+                </p>
+            </article>
+            <footer>
+                © 2019 Minimalist Website
+                <span class="separator">
+                    |
+                </span>
+                Design by
+                <a href="https://gabrielak89.github.io/Minimalist_Website/">
+                    Gabriel Acatrinei
+                </a>
+            </footer>
+        </div>
+    </body>
 </html>
