--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
       content="width=device-width,height=device-height,initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
      <link rel="stylesheet" href="css/style.css" />
-    <script src="js/scripts.js"></script>
-    <title>Minimalist Webpage</title>
+    <title>Web Design Course</title>
   </head>
 
   <body>
     <div class="container">
       <header class="header">
-        <a class="link-title" href="index.html">Minimalistic Website</a>
-        <!-- <a href="contact.html">Contact</a> -->
+        <a class="link-title" href="index.html">Web Design Course</a>
       </header>
 
       <nav class = "menu">
-      <a   href  = "index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a   href  = "about.html">About us</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a   href  = "contact.html">Contact</a>
+          <a   href  = "../index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a   href  = "../about.html">About us</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a   href  = "../contact.html">Contact</a>
       </nav>
 
       <aside>
-        <h1>Side Bar</h1>
+        <a href="chapters/Chapter1.html">Chapter 1: Basics HTML5 </a><br>
+        <a href="chapters/Chapter2.html">Chapter 2 The Basics of CSS </a><br>
+        <a href="chapters/Chapter3.html">Chapter 3 HTML5 </a><br>
+        <a href="chapters/Chapter4.html">Chapter 4 Review CSS and passing to CSS 3 </a><br>
+        <a href="chapters/Chapter5.html">Chapter 5 Get your Bootstrap Project Started </a><br>
+        <a href="chapters/Chapter6.html">Chapter 6 Final Conclusion</a><br>
       </aside>
 
       <article class="main">
